# netkeiba-scraping

./: .gitignore  LICENSE  nishida_index.py  pyproject.toml  scrape.py
data/: payouts.parquet  race_profiles.parquet  races.parquet
src/netkeiba_prediction/: __init__.py  backtest.py  evaluate.py  features.py  models.py
src/netkeiba_scraping/: __main__.py  parsers.py  scraper.py
