[tool.poetry]
name = "netkeiba-scraping"
version = "0.1.0"
description = ""
authors = ["Akihito KIRISAKI <kirisaki@klara.works>"]
readme = "README.md"
packages = [{include = "netkeiba_scraping"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beautifulsoup4 = "^4.12.2"
numpy = "^1.26.1"
pandas = "^2.1.1"
requests = "^2.31.0"
lxml = "^4.9.3"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
